--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 					</div>
 
 <div class="duration-500 box-border bg-exercise-image overflow-hidden bg-cover bg-center relative rounded-lg h-96 w-96 hover:scale-105 hover:translate-y-0">
-    <div class="duration-500 w-full h-full bg-transparent hover:bg-black"></div>
+    <!-- <div class="duration-500 w-full h-full bg-transparent hover:bg-black"></div> -->
     <div class="duration-500 h-full w-full bg-yellow-200 hover:bg-black flex flex-col text-white absolute bottom-0 justify-end translate-y-1/4">
       <div class="text-3xl relative w-max py-2 px-1">
         Project Name
